2007-07-29  Alan Modra  <amodra@bigpond.net.au>

	* ld-elf/weak-dyn-1.rd: Adjust.

2007-07-25  Daniel Jacobowitz  <dan@codesourcery.com>

	* ld-cdtest/cdtest-foo.cc (strncpy): Fix parameter name.

2007-07-24  Nick Clifton  <nickc@redhat.com>

	* ld-arm/arm-elf.exp: Move EABI attribute tests into EABI only
	section.

2007-07-23  Richard Sandiford  <richard@codesourcery.com>

	* ld-elf/weak-dyn-1a.s, ld-elf/weak-dyn-1b.s, ld-elf/weak-dyn-1.ld,
	* ld-elf/weak-dyn-1.rd: New test.
	* ld-elf/elf.exp: Run it.

2007-07-13  Nathan Sidwell  <nathan@codesourcery.com>

	* ld-scripts/assert.t: Tweak to avoid relying on empty's VMA being
	zero.

2007-07-10  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-elfvers/vers.exp: Add tests for --defsym.

	* ld-elfvers/vers32.map: Likewise.
	* ld-elfvers/vers32a.c: Likewise.
	* ld-elfvers/vers32a.dsym: Likewise.
	* ld-elfvers/vers32a.ver: Likewise.
	* ld-elfvers/vers32b.c: Likewise.
	* ld-elfvers/vers32b.dsym: Likewise.
	* ld-elfvers/vers32b.ver: Likewise.
	* ld-elfvers/vers32c.dsym: Likewise.
	* ld-elfvers/vers32c.ver: Likewise.
	* ld-elfvers/vers32d.ver: Likewise.

2007-07-06  Nick Clifton  <nickc@redhat.com>

	* lib/default.exp: Update copyright notice to refer to GPLv3.
	* config/default.exp, ld-alpha/alpha.exp, ld-arm/arm-elf.exp,
	ld-auto-import/auto-import.exp, ld-bootstrap/bootstrap.exp,
	ld-cdtest/cdtest.exp, ld-checks/checks.exp, ld-cris/cris.exp,
	ld-crx/crx.exp, ld-cygwin/exe-export.exp, ld-d10v/d10v.exp,
	ld-discard/discard.exp, ld-elf/elf.exp, ld-elf/exclude.exp,
	ld-elf/frame.exp, ld-elf/sec64k.exp, ld-elf/binutils.exp,
	ld-elf/tls_common.exp, ld-elf/shared.exp, ld-elf/dwarf.exp,
	ld-elf/wrap.exp, ld-elfcomm/elfcomm.exp, ld-elfvers/vers.exp,
	ld-elfvsb/elfvsb.exp, ld-elfweak/elfweak.exp, ld-xc16x/xc16x.exp,
	ld-fastcall/fastcall.exp, ld-frv/tls.exp, ld-h8300/h8300.exp,
	ld-i386/i386.exp, ld-ia64/ia64.exp, ld-linkonce/linkonce.exp,
	ld-m68hc11/m68hc11.exp, ld-maxq/maxq.exp,
	ld-mips-elf/mips-elf-flags.exp, ld-mips-elf/mips-elf.exp,