@@ -1,0 +1,7 @@
+	.text
+	.globl	_start
+_start:
+        li.d    $f2,1.10000000000000000000e0
+
+	.section .sdata
+	.space 0x10000
