@@ -1,0 +1,3 @@
+#source: reloc-5.s
+#ld:
+#error: small-data section exceeds 64KB.*truncated to fit: R_MIPS_GPREL16
